# Current_Clion_projects

./: gitignore
OS-HW-10/: CMakeLists.txt  a.out  fd  main.c
OS-HW-4/: CMakeLists.txt  a.out  main.c
OS-HW-7/: CMakeLists.txt  a.out  main.c  test  test.c  testinput.txt
OS-HW-8/: CMakeLists.txt  client.c  clnt_join.c  main.c
OS-hw-1/: Makefile  Odyssey.txt  a.txt  main.c  scat
OS-hw-2/: CMakeLists.txt  main.c  makefile  test.txt  xargs
OS-hw-3/: CMakeLists.txt  main.c
OS_HW_12/: CMakeLists.txt  main.c  nssh
SADS-1/: CMakeLists.txt  dockDockBuildParams.json  infix.c  infix.h  main.c  makefile  readme.md  rpn.c  rpn.h  rpn_stack.c  rpn_stack.h  run_infix.c  testerino
SADS-1/afl_findings/: .cur_input  fuzz_bitmap  fuzzer_stats  plot_data
SADS-1/afl_findings/queue/: id:000001,src:000000,op:flip1,pos:0,+cov  id:000002,src:000000,op:flip1,pos:1,+cov  id:000003,src:000000,op:flip1,pos:1,+cov  id:000004,src:000000,op:flip1,pos:1,+cov  id:000005,src:000000,op:flip1,pos:2,+cov  id:000006,src:000000,op:flip1,pos:2,+cov  id:000007,src:000000,op:flip1,pos:2,+cov  id:000008,src:000000,op:flip1,pos:2  id:000009,src:000000,op:flip1,pos:3,+cov  id:000010,src:000000,op:flip1,pos:4  id:000011,src:000000,op:flip1,pos:5,+cov  id:000012,src:000000,op:flip1,pos:6  id:000013,src:000000,op:flip1,pos:8  id:000014,src:000000,op:flip1,pos:8,+cov  id:000015,src:000000,op:flip1,pos:8,+cov  id:000016,src:000000,op:flip1,pos:11,+cov  id:000017,src:000000,op:flip1,pos:11,+cov  id:000018,src:000000,op:flip1,pos:12,+cov  id:000019,src:000000,op:flip1,pos:12,+cov  id:000020,src:000000,op:flip1,pos:12,+cov  id:000021,src:000000,op:flip1,pos:15,+cov  id:000022,src:000000,op:flip1,pos:18,+cov  id:000023,src:000000,op:flip1,pos:18,+cov  id:000024,src:000000,op:flip1,pos:19,+cov  id:000025,src:000000,op:flip1,pos:22  id:000026,src:000000,op:flip1,pos:23  id:000027,src:000000,op:flip1,pos:23  id:000028,src:000000,op:flip1,pos:23,+cov  id:000029,src:000000,op:flip1,pos:24,+cov  id:000030,src:000000,op:flip1,pos:24,+cov  id:000031,src:000000,op:flip1,pos:27,+cov  id:000032,src:000000,op:flip1,pos:28  id:000033,src:000000,op:flip1,pos:31  id:000034,src:000000,op:flip1,pos:31,+cov  id:000035,src:000000,op:flip1,pos:31,+cov  id:000036,src:000000,op:flip1,pos:32  id:000037,src:000000,op:flip1,pos:33,+cov  id:000038,src:000000,op:flip1,pos:36  id:000039,src:000000,op:flip1,pos:37,+cov  id:000040,src:000000,op:flip2,pos:2  (+382 more)
SADS-1/test/: test_rpn.c  test_stack.c
coding-100/: missing_words.txt
more_OS/: CMakeLists.txt  main.c  test.c
phil_problem/: CMakeLists.txt  a.out  main.c
testerino/: CMakeLists.txt  main.cpp  stack.h
untitled/: CMakeLists.txt  main.c
zab/: CMakeLists.txt  main.c
